[gd_scene load_steps=3 format=3 uid="uid://dpynhntt6sydk"]

[ext_resource type="Script" path="res://SkillsBar.gd" id="1_iypku"]
[ext_resource type="Script" path="res://action_bar.gd" id="1_p26vf"]

[node name="ActionBar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p26vf")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SkillsBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0
script = ExtResource("1_iypku")

[connection signal="property_list_changed" from="." to="." method="_on_property_list_changed"]
[connection signal="script_changed" from="." to="." method="_on_script_changed"]
